--- a/src/app/components/form-client/form-client.component.html
+++ b/src/app/components/form-client/form-client.component.html
@@ -1,19 +1,13 @@
-<h4>Formularios <small> Reactivos </small></h4>
+<h2><span *ngIf="!editMode">Crear nuevo cliente</span></h2>
+<h2><span *ngIf="editMode">Editar cliente</span></h2>
 <hr />
 <form [formGroup]="reactiveForm" autocomplete="off" (ngSubmit)="onSubmit()">
-  <div>
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
-      <div class="col">
-        <input
-          class="form-control"
-          type="text"
-          placeholder="Nombre"
-          formControlName="nombre"
-          [class.is-invalid]="getFormControlNoValid('nombre')"
-        />
-        <small class="text-danger" *ngIf="getFormControlNoValid('nombre')"
-          >Al menos 5 caracteres</small
+    <div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">Nombre</label>
+            <div class="col">
+                <input class="form-control" type="text" placeholder="Nombre" formControlName="nombre" [class.is-invalid]="getFormControlNoValid('nombre')" />
+                <small class="text-danger" *ngIf="getFormControlNoValid('nombre')">Al menos 5 caracteres</small
         >
       </div>
     </div>
@@ -122,6 +116,7 @@
       <label class="col-2 col-form-label">Password</label>
       <div class="col">
         <input
+          #inputPassword
           class="form-control"
           type="password"
           placeholder="Contraseña"
@@ -137,15 +132,14 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Tarifa</label>
       <div class="col">
-        <select class="form-control" formControlName="tarifa">
-          <option selected="true" disabled>Seleccione una tarifa</option>
+        <select class="form-control" formControlName="tarifa" >
+          <option value="" disabled>Seleccione una opción...</option>
           <option *ngFor="let tarifa of tarifas" [value]="tarifa.id">{{tarifa.tipo}}</option>
-
         </select>
 
       </div>
     </div>
 
   </div>
-  <button type="submit" class="btn btn-primary mt-2" style="float: right;">Crear</button>
+  <button type="submit" class="btn btn-primary mt-2" style="float: right;">Guardar</button>
 </form>
